# LCHATTER

./: .gitignore  CMakeLists.txt  Goals.txt  LICENSE  Main.cpp  Makefile  Plans
.Old/anim/: Makefile  ext  main.c
.Old/box/: Makefile  main.c
App/: App.cpp  Event.cpp  Event.hpp
Backend/: AppBackend.cpp  Backend.cpp  Makefile  out.txt
Backend/.Old/: Address_not_needed.cpp
Backend/App/: App.cpp  Event.cpp  Frontend_Event.cpp
Backend/Chat/: ChatMessage.cpp
Backend/Common/: Connection.cpp  ConnectionRequest.cpp  String.cpp  TimePoint.cpp  User.cpp
Backend/File/: Logger.cpp
Backend/Inc/: Backend.hpp
Backend/Src.Old/: String.old.cpp
Backend/Test/: AdapterAddresses.cpp  Address.cpp  CRTP.cpp  Connection.cpp  ConnectionRequest.cpp  Filetime.cpp  Get_Type.cpp  Logger.cpp  Memcmp.cpp  Ncurses.cpp  Rough.cpp  Serializer.cpp  String.cpp  String_Upgrade.cpp  TimePoint.cpp  UdpSender.cpp  User.cpp  _out.txt
Backend/Upgrade/: String.cpp
Chat/: Chat.cpp  ChatMessage.cpp  Message.cpp
Common/: Addr.cpp  Address.cpp  Connection.cpp  Fwd.hpp  Global.cpp  String.cpp  TimePoint.cpp  TimeStamp.cpp  UUID.cpp  User.cpp
Common/Hash/: MD5_Digest.cpp  (+3 more)
Frontend/: AppFrontend.cpp  TextBox.cpp  Window.cpp
Frontend-Imgui/: Makefile  app_base.cpp  chat.cpp  imgui.ini
Log/: Logger.cpp
Objects/: .gitkeep
Test/: Chat.cpp  Filetime.cpp  Find.cpp  HostName.cpp  Log.cpp  Md5.cpp  Md5_Hash.cpp  Set.cpp  String.cpp  Swap.cpp  TImePoint__2.cpp  Test.txt  TimeStamp.cpp  UdpReceiver.cpp  UdpSender.cpp  Window.cpp  non_blocking_udp.cpp
Udp/: UdpReceiver.cpp
User/: User.cpp
(+172 files in other folders)
